--- a/style.css
+++ b/style.css
@@ -36,10 +36,20 @@ li {
   font-size: 20px;
 }
 
-footer p {
+#copyright {
   font-size: 16px;
 }
 
-article header p {
+#author {
   font-style: italic;
+  font-size: 18px;
+}
+
+.related-author {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.related {
+  list-style: none;
 }
