--- a/style.css
+++ b/style.css
@@ -78,3 +78,24 @@ li:first-child {
 li:last-child {
   font-style: italic;
 }
+
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+}
+
+a:visited {
+  color: orangered;
+}
+
+a:hover {
+  color: orangered;
+  font-weight: bold;
+  font-style: normal;
+  text-decoration: underline orangered;
+}
+
+a:active {
+  background-color: black;
+  font-style: italic;
+}
