--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   background-color: #f7f7f7;
   padding: 20px 40px;
   margin-bottom: 30px;
+  height: 80px;
 }
 
 .post-header {
@@ -20,6 +21,11 @@ body {
 
 nav {
   font-size: 18px;
+}
+
+.post-img {
+  width: 100%;
+  height: auto;
 }
 
 article {
@@ -31,6 +37,7 @@ aside {
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
   padding: 50px 0;
+  width: 500px;
 }
 
 h1,
@@ -106,13 +113,17 @@ li:last-child {
   margin-bottom: 0;
 }
 
+.related-author:last-child {
+  font-style: normal;
+}
+
 a:link {
   color: #1098ad;
   text-decoration: none;
 }
 
 a:visited {
-  color: orangered;
+  color: #1098ad;
 }
 
 a:hover {
