--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 .container {
   width: 800px;
   margin: 0 auto;
+  position: relative;
 }
 
 .main-header {
@@ -145,4 +146,14 @@ a:active {
 nav a:link:last-child {
   margin-right: 0;
   padding-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  bottom: 30px;
+  right: 20px;
 }
