--- a/style.css
+++ b/style.css
@@ -143,9 +143,14 @@ a:active {
   font-style: italic;
 }
 
+nav a {
+  display: inline-block;
+  margin-top: 10px;
+  margin-right: 30px;
+}
+
 nav a:link:last-child {
   margin-right: 0;
-  padding-right: 0;
 }
 
 button {
@@ -156,4 +161,13 @@ button {
   position: absolute;
   bottom: 30px;
   right: 20px;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 10px;
+}
+
+h3 + p::first-line {
+  color: red;
 }
